--- a/spring-social-network/pom.xml
+++ b/spring-social-network/pom.xml
@@ -11,7 +11,6 @@
 	<groupId>social</groupId>
 	<artifactId>spring-social-network</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
 	<name>spring-social-network</name>
 	<description>Social network rest API</description>
 
@@ -82,6 +81,11 @@
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
