--- a/spring-social-network/src/main/resources/application.properties
+++ b/spring-social-network/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/network?serverTimezone=UTC
-spring.datasource.username=oleg
-spring.datasource.password=oleg
+ spring.datasource.username=oleg
+ spring.datasource.password=oleg
+# spring.datasource.username=root
+# spring.datasource.password=n0taSha?/Ye3
+server.port = 8090
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
